--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         background-color: rgb(0, 150, 129);
         height: 30px;
     }
+    .iframe{
+        top:-20px
+        
+    }
 </style>
 
 <body>
@@ -23,7 +27,7 @@
         </div>
     </header>
     <main>
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR2q602tmWgIQSja-NhqynIODs0ipU0xJx7mktom6cc7BnU2edpI3Eqc0rzfYu9aum3cG6_uo3rw0TM/pubhtml?gid=1331535085&single=true" 
+        <iframe  class="iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR2q602tmWgIQSja-NhqynIODs0ipU0xJx7mktom6cc7BnU2edpI3Eqc0rzfYu9aum3cG6_uo3rw0TM/pubhtml?gid=1331535085&single=true" 
         width="1250"
         height="1000"></iframe>
 
