--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Como vamos - Reporte 2024</title>
+    <title>Como vamos - Siglo</title>
 </head>
 <style>
     body{
